# marketwatch

./: .env.defautl  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  vercel.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: URL_Checker.yml  ema-workflow.yml  python-docs.yml  python-publish.yml  python-test.yml
about/: index.html
api/: Dockerfile  Pipfile  Procfile  app.json  app.py  docker-compose.yml  index.html  requirements.txt  setup.md  vercel.json
api/api/: app.py
api/api/templates/: game.html.j2  leaderboard.html.j2  portfolio.html.j2
api/templates/: card.html.j2  game.html.j2  leaderboard.html.j2  portfolio.html.j2  watchlist.html.j2
contacts/: index.html
docs/: about.md  api.md  contacts.md  examples.md  explanation.md  getting-started.md  index.md  reference.md  tutorials.md
examples/: index.html
explanation/: index.html
getting-started/: index.html
how-to-guides/: index.html
marketwatch/: __init__.py  exception.py  exceptions.py  game.py  marketwatch.py  schemas.py  watchlist.py
marketwatch/test/: test_marketwatch.py
notebook/: ema.ipynb  example.ipynb  rsi.ipynb
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/api/: index.html
site/contacts/: index.html
site/examples/: index.html
site/explanation/: index.html
site/getting-started/: index.html
site/reference/: index.html
site/tutorials/: index.html
test/: test_exceptions.py  test_game.py  test_marketwatch.py  test_schemas.py  test_ticker.py  test_watchlist.py
tutorials/: index.html
