[tool.poetry]
name = "marketwatch"
version = "0.1.2"
description = "MarketWatch's API"
authors = ["Antoine Boucher <antoine.boucher012@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
beautifulsoup4 = "^4.12.0"
rich = "^13.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
sphinx = "^6.1.3"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
