[tool.poetry]
name = "marketwatch"
version = "0.1.9"
description = "MarketWatch's API"
authors = ["Antoine Boucher <antoine.boucher012@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "http://github.com/antoineboucher/marketwatch"
documentation = "http://github.com/antoineboucher/marketwatch/wiki"
keywords = ["marketwatch", "api", "stock", "finance", "market", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
beautifulsoup4 = "^4.12.0"
rich = "^13.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
sphinx = "^6.1.3"
pre-commit = "^3.0.0"
black = "^23.1.0"
genbadge = "^1.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
