[tool.poetry]
name = "marketwatch"
version = "0.2.3"
description = "MarketWatch's API"
authors = ["Antoine Boucher <antoine.boucher012@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "http://github.com/antoineboucher/marketwatch"
documentation = "https://antoinebou12.github.io/marketwatch/api/"
keywords = ["marketwatch", "api", "stock", "finance", "market", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.0"
rich = "^13.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
sphinx = "^7.0.0"
pre-commit = "^3.0.0"
black = "^24.0.0"
genbadge = "^1.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mkdocstrings = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
