[metadata]
name = marketwatch
description = marketwatch is a python library to interact with the marketwatch website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/antoinebou12/marketwatch
author = Antoine Boucher <antoine.boucher012@gmail.com>
license = Apache-2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Changelog=https://docs.pytest.org/en/stable/changelog.html
    Twitter=https://twitter.com/pytestdotorg
    Source=https://github.com/pytest-dev/pytest
    Tracker=https://github.com/pytest-dev/pytest/issues

[options]
packages =
    marketwatch
py_modules = py
install_requires =
    beautifulsoup4
    httpx
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.package_data]
_pytest = py.typed
pytest = py.typed

[build_sphinx]
source_dir = doc/en/
build_dir = doc/build
all_files = 1

[check-manifest]
ignore =
    src/_pytest/_version.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
